# CMF

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  idf_component.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
lib/libhelix-aac/src/: buffers.c  decelmnt.c  sbr.c  sbrside.c
src/Containers/: Archive.cpp  Archive.cpp.md  Archive.h  Archive.hpp  BinaryTree.h  Queue.h
src/Core/: Application.cpp  Application.cpp.md  Application.h  Core.h  EntryPoint.h
src/Devices/: AW9523.cpp  AW9523.h  BM8563.cpp  BM8563.h  ButtonInput.cpp  ButtonInput.h  Camera.cpp  Camera.h  Device.h  Display.cpp  Display.h  LIS2DW12.cpp  LIS2DW12.h  TCA9555.cpp  TCA9555.h  Timer.cpp  Timer.h
src/Devices/LED/: LED.h  LEDBlinkFunction.h
src/Drivers/: Driver.cpp  Driver.h  InputGPIO.cpp  InputGPIO.h  InputTouchGPIO.cpp  InputTouchGPIO.h  OutputGPIO.cpp  OutputGPIO.h
src/Drivers/Input/: InputAW.cpp  InputAW.h  InputGPIO.cpp  InputGPIO.h  InputTCA.cpp  InputTCA.h  InputTouchGPIO.cpp  InputTouchGPIO.h
src/Drivers/Interface/: InputDriver.cpp  InputDriver.h  OutputDriver.cpp  OutputDriver.h
src/Drivers/Output/: OutputCurrAW.cpp  OutputCurrAW.h  OutputDigAW.cpp  OutputDigAW.h  OutputGPIO.cpp  OutputGPIO.h  OutputMCPWM.cpp  OutputMCPWM.h  OutputPWM.cpp  OutputPWM.h  OutputTCA.cpp  OutputTCA.h
src/Entity/: AsyncEntity.cpp  AsyncEntity.h  Entity.cpp  Entity.h  SyncEntity.cpp  SyncEntity.h
src/Event/: Event.h  EventBroadcaster.cpp  EventBroadcaster.h  EventDelegate.cpp  EventDelegate.h  EventHandle.cpp  EventHandle.h  EventScanner.cpp  EventScanner.h
src/FS/: ArchiveCache.h  FSFileImpl.cpp  FSFileImpl.h  File.h  FileArchive.cpp  FileArchive.h  FileCache.h  FileImpl.h  RamFile.h  RawCache.h  SPIFFS.cpp  SPIFFS.h
src/FileSystem/: ArchiveCache.cpp  ArchiveCache.h  CompositeCache.h  CompressedFile.cpp  CompressedFile.h  FSFileImpl.cpp  FSFileImpl.h  File.cpp  File.h  FileArchive.cpp  FileArchive.h  FileCache.h  FileImpl.h  RamFile.cpp  RamFile.h  RawCache.cpp  RawCache.h  SPIFFS.cpp  SPIFFS.h
src/LV_Interface/: FSLVGL.cpp  FSLVGL.h  InputLVGL.cpp  InputLVGL.h  LVGIF.cpp  LVGIF.h  LVGL.cpp  LVGL.h  LVModal.cpp  LVModal.h  LVObject.cpp  LVObject.h  LVScreen.cpp  LVScreen.h  LVSelectable.cpp  LVSelectable.h  LVStyle.h
src/Log/: Log.h
src/Memory/: Cast.h  GarbageCollector.cpp  GarbageCollector.h  ObjectManager.cpp  ObjectManager.h  ObjectMemory.cpp  ObjectMemory.h
src/Memory/SmartPtr/: ObjectPtr.h  StrongObjectPtr.h  WeakObjectPtr.h
src/Misc/: Djb.h  Enum.h  Singleton.h  TemplateTypes.h
src/Object/: Class.cpp  Class.h  Interface.h  Object.cpp  Object.h  ObjectConstruct.h  SubclassOf.h
src/Periphery/: ADCUnit.cpp  ADCUnit.h  GPIO.cpp  GPIO.h  GPIOPeriph.cpp  GPIOPeriph.h  I2C.cpp  I2C.h  I2CDevice.cpp  I2CDevice.h  I2CMaster.cpp  I2CMaster.h  I2S.cpp  I2S.h  Periphery.cpp  Periphery.h  WiFi.cpp  WiFi.h
src/Services/: ADCReader.cpp  ADCReader.h  Battery.cpp  Battery.h  ButtonInput.cpp  ButtonInput.h  Service.h  ShutdownService.cpp  ShutdownService.h
src/Services/Audio/: AACAudioGenerator.cpp  AACAudioGenerator.h  AACSource.cpp  AACSource.h  Audio.cpp  Audio.h  AudioGenerator.h  AudioSource.h  FileAudioSource.cpp  FileAudioSource.h
src/Services/Battery/: Battery.cpp  Battery.h
src/Services/LED/: LED.h  LEDBlinkFunction.h  LEDFadeFunction.h
src/Services/Modules/: ModuleDefs.cpp  ModuleDefs.h  ModuleDevice.cpp  ModuleDevice.h  ModuleService.h  ModuleType.h
src/Services/Modules/ModuleDevices/: RM_CO2Sensor.cpp  RM_CO2Sensor.h  RM_IRModule.cpp  RM_IRModule.h  RM_LEDModule.cpp  RM_LEDModule.h  RM_MotionSensor.cpp  RM_MotionSensor.h  RM_Perfboard.cpp  RM_Perfboard.h  RM_TempHumModule.cpp  RM_TempHumModule.h
src/Services/Motors/: Motors.h  MotorsEaser.h  Servos.h
src/Services/Network/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  UDPEmitter.cpp  UDPEmitter.h  UDPListener.cpp  UDPListener.h  WiFiAccessPoint.cpp  WiFiAccessPoint.h  WiFiStation.cpp  WiFiStation.h
src/SmartPtr/: ObjectPtr.h
src/Statics/: ApplicationStatics.cpp  ApplicationStatics.h
src/Thread/: Threaded.cpp  Threaded.h
src/Util/: Hysteresis.cpp  Hysteresis.h  RingBuffer.cpp  RingBuffer.h  stdafx.cpp  stdafx.h
src/Util/StateMachine/: State.cpp  State.h  StateMachine.cpp  StateMachine.h
src/Util/libhelix-aac/src/: aacdec.h
